<resources>
    <string name="app_name">TechnicaV2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Technica Application</string>
    <string name="nav_header_subtitle">Technica</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_onzeclub">Onze Club</string>
    <string name="menu_sponsors">Partners</string>
    <string name="menu_kalender">Kalender</string>
    <string name="menu_praesidium">Praesidium</string>
    <string name="menu_clublied">Clublied</string>
    <string name="menu_vacatures">Vacatures</string>

    <string name="uitleg_sponsor">3-it wil dat u als klant krijgt wat u helpt vooruit te komen. Dat klinkt heel veelbelovend en oh zo makkelijk.
                    Door onze persoonlijke aanpak en door echt naar u te luisteren proberen we dat verschil te maken en een echte partner
                    voor u te zijn. Het aandragen van de juiste oplossing om uw vragen te kunnen beantwoorden kan alleen maar als we exact
                    weten wat uw speelveld is en wat u daarbinnen bezighoudt.</string>

    <string name="home_week">Het volgende evenement bij Technica:</string>
    <string name="onze_club">Ik had mezelf voorgenomen dat studentenverenigingen niets voor mij waren, tot op het moment dat een paar goede vrienden mij uiteindelijk overtuigden om het toch maar eens te proberen.
    Nu twee jaar later sta ik aan het hoofd van deze mooie familie voor het komende academiejaar. Nog geen seconde heb ik hier spijt van gehad! "\n" "\n" Iedereen heeft de keuze om steunend lid te worden of om zich te laten dopen.
        Bij beide keuzes ondersteunen we je met onze hulp, samenvattingen, … De kortingen die aan je lidkaart verbonden zijn, zijn natuurlijk ook mooi meegenomen! "\n" "\n" Nog steeds benieuwd naar wat alles juist inhoud?
    Aarzel dan niet om iemand van het praesidium aan te spreken; we hebben het allemaal meegemaakt en kunnen het je dus in geuren en kleuren uitleggen! Hopelijk tot snel!
    "\n" "\n" ~Kevin Davis - Praeses~</string>

    <string name="clublied" >De beste studenten van Boom die zijn hier,"\n" met hun magen reusachtig en droog."\n" "\n"
    De leraars die sidderen en vluchten van angst, "\n" als wij stormen zo wild naar den toog. "\n" "\n"
    En komt hier gij vriend, drink met ons een pint, "\n" want pas dan zijn wij allen tevreden. "\n" "\n"
    Ja, wij zijn de heersers van Boom, "\n" De mannen van Technica. "\n" "\n"
    En Technica (en Technica), "\n" En Technica (en Technica), "\n" En Technica (en Technica), "\n" En Technica, HOI, HOI "\n" "\n"
    Ja, wij zijn de heersers van Boom, "\n" De mannen van Technica.</string>

    <string name=""
</resources>
