<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_onzeclub"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_onzeclub" />
        <item
            android:id="@+id/nav_sponsors"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_sponsors" />
        <item
            android:id="@+id/nav_kalender"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_kalender" />
        <item
            android:id="@+id/nav_praesidium"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_praesidium" />
        <item
            android:id="@+id/nav_clublied"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_clublied" />
    </group>

</menu>
